# gmail-automation

./: .env.example  .envrc  .gitignore  CLAUDE.md  README.md  config.yaml  config.yaml.example  pyproject.toml
docs/: TTM.csv  coding_style.md  setup.md
output/: daily_pnl.jsonl  parsed_confirmations.jsonl  ttm.json
src/gmail_automation/: __init__.py  __main__.py  auth.py  cli.py  config.py  converter.py  daily_pnl.py  gmail_client.py  jpy_converter.py  parser.py  processor.py  pubsub_listener.py  ttm_converter.py
tests/: conftest.py  test_config.py  test_converter.py  test_gmail_client.py  test_parser.py  test_processor.py
